--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
