--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "18.2.0",
+    "react-input-date-mask": "^2.0.0",
+    "react-select": "^5.7.4",
+    "react-select-search": "^4.1.6"
   }
 }
