--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "jspdf": "^2.5.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
